Menambahkan report pendapatan

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=ProjectBasdat
+application.vendor=User
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,13 +33,32 @@ dist.jar=${dist.dir}/ProjectBasdat.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ProjectBasdat
+endorsed.classpath=
 excludes=
+file.reference.commons-beanutils-1.9.4.jar=D:\\Kuliah\\UB'22\\Semester 3\\Basis Data\\ProjectAkhir\\library\\baru\\commons-beanutils-1.9.4.jar
+file.reference.commons-collections4-4.4.jar=D:\\Kuliah\\UB'22\\Semester 3\\Basis Data\\ProjectAkhir\\library\\baru\\commons-collections4-4.4.jar
+file.reference.commons-digester-2.1.jar=D:\\Kuliah\\UB'22\\Semester 3\\Basis Data\\ProjectAkhir\\library\\baru\\commons-digester-2.1.jar
+file.reference.commons-logging-1.2.jar=D:\\Kuliah\\UB'22\\Semester 3\\Basis Data\\ProjectAkhir\\library\\baru\\commons-logging-1.2.jar
+file.reference.groovy-all-2.0.1.jar=D:\\Kuliah\\UB'22\\Semester 3\\Basis Data\\ProjectAkhir\\library\\lib\\JasperReport\\groovy-all-2.0.1.jar
+file.reference.itext-2.1.7.js6-20170307.125214-1.jar=D:\\Kuliah\\UB'22\\Semester 3\\Basis Data\\ProjectAkhir\\library\\baru\\itext-2.1.7.js6-20170307.125214-1.jar
+file.reference.jasperreports-6.20.6.jar=D:\\Kuliah\\UB'22\\Semester 3\\Basis Data\\ProjectAkhir\\library\\baru\\jasperreports-6.20.6.jar
 file.reference.jcalendar.jar=D:\\Download\\jcalendar.jar
+file.reference.jfreechart-1.0.19-demo.jar=D:\\Kuliah\\UB'22\\Semester 3\\Basis Data\\ProjectAkhir\\library\\baru\\jfreechart-1.0.19\\jfreechart-1.0.19-demo.jar
+file.reference.org-jdesktop-layout.jar=D:\\Kuliah\\UB'22\\Semester 3\\Basis Data\\ProjectAkhir\\library\\lib\\JasperReport\\org-jdesktop-layout.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.jdbc.classpath}:\
-    ${file.reference.jcalendar.jar}
+    ${file.reference.jcalendar.jar}:\
+    ${file.reference.groovy-all-2.0.1.jar}:\
+    ${file.reference.org-jdesktop-layout.jar}:\
+    ${file.reference.commons-beanutils-1.9.4.jar}:\
+    ${file.reference.commons-collections4-4.4.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.itext-2.1.7.js6-20170307.125214-1.jar}:\
+    ${file.reference.jasperreports-6.20.6.jar}:\
+    ${file.reference.jfreechart-1.0.19-demo.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
